# pymskt

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  conda_environment.yml  environment.yml  environment_jan2022.yml  environment_no_builds.yml  functions_from_neuralseg_nsvtk_deleting_as_added_to_pymskt.py  get_test_MESE_info.py  meniscus_subregions.nrrd  pyproject.toml  requirements-conda.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test_seg_men_split.nrrd
.github/workflows/: build-test.yml  building-pypi-linux.yml  docs.yml
data/: SAG_3D_DESS_RIGHT_bones_cart_men_fib-label.nrrd  femur_cart_smoothed_binary_resampled_10k_pts.vtk  femur_cropped_cartilage_thick_10k_pts.vtk  femur_cropped_cartilage_thick_roi_10k_pts.vtk  femur_cropped_cartilage_thick_smoothed_1.25_sigma_10k_pts.vtk  femur_mesh_10k_pts.vtk  femur_thickness_mm_10k_pts.vtk  femur_thickness_mm_regions_10k_pts.vtk  femur_thickness_mm_regions_10k_pts_thick_smoothed_1.25_sigma.vtk  femur_thickness_mm_regions_10k_pts_thick_smoothed_3_sigma.vtk  lat_tib_cart_smoothed_binary_no_surface_resampling.vtk  med_tib_cart_smoothed_binary_no_surface_resampling.vtk  tibia_smoothed_image_10k_pts_thick_regions.vtk
data/MESE_T2_dicom_data/: E3655S8I001.MR.dcm  E3655S8I002.MR.dcm  E3655S8I003.MR.dcm  E3655S8I004.MR.dcm  E3655S8I005.MR.dcm  E3655S8I006.MR.dcm  E3655S8I007.MR.dcm  E3655S8I008.MR.dcm  E3655S8I009.MR.dcm  E3655S8I010.MR.dcm  E3655S8I011.MR.dcm  E3655S8I012.MR.dcm  E3655S8I013.MR.dcm  E3655S8I014.MR.dcm  E3655S8I015.MR.dcm  E3655S8I016.MR.dcm  E3655S8I017.MR.dcm  E3655S8I018.MR.dcm  E3655S8I019.MR.dcm  E3655S8I020.MR.dcm  E3655S8I021.MR.dcm  E3655S8I022.MR.dcm  E3655S8I023.MR.dcm  E3655S8I024.MR.dcm  E3655S8I025.MR.dcm  E3655S8I026.MR.dcm  E3655S8I027.MR.dcm  E3655S8I028.MR.dcm  E3655S8I029.MR.dcm  E3655S8I030.MR.dcm  E3655S8I031.MR.dcm  E3655S8I032.MR.dcm  E3655S8I033.MR.dcm  E3655S8I034.MR.dcm  E3655S8I035.MR.dcm  E3655S8I036.MR.dcm  E3655S8I037.MR.dcm  E3655S8I038.MR.dcm  E3655S8I039.MR.dcm  E3655S8I040.MR.dcm  (+152 more)
data/MESE_T2_dicom_data_anon/: E3655S8I001.MR.dcm  E3655S8I002.MR.dcm  E3655S8I003.MR.dcm  E3655S8I004.MR.dcm  E3655S8I005.MR.dcm  E3655S8I006.MR.dcm  E3655S8I007.MR.dcm  E3655S8I008.MR.dcm  E3655S8I009.MR.dcm  E3655S8I010.MR.dcm  E3655S8I011.MR.dcm  E3655S8I012.MR.dcm  E3655S8I013.MR.dcm  E3655S8I014.MR.dcm  E3655S8I015.MR.dcm  E3655S8I016.MR.dcm  E3655S8I017.MR.dcm  E3655S8I018.MR.dcm  E3655S8I019.MR.dcm  E3655S8I020.MR.dcm  E3655S8I021.MR.dcm  E3655S8I022.MR.dcm  E3655S8I023.MR.dcm  E3655S8I024.MR.dcm  E3655S8I025.MR.dcm  E3655S8I026.MR.dcm  (+166 more)
docs/: cython_functions.html  index.html
examples/: Create Muscle Mesh Jan.28.2022.ipynb  Create_Femur_Mesh_Assign_Cartilage_Thickness_and_Regions_Feb.3.2022.ipynb  Create_Tibia_Mesh_Assign_Cartilage_Thickness_and_Regions_Feb.3.2022.ipynb  Create_whole_knee_Feb.3.2022.ipynb
images/: cartilage_thickness_analysis.pptx  ~$cartilage_thickness_analysis.pptx
planning/: t2_mapping_integration_plan.md
pymskt/: __init__.py
pymskt.egg-info/: PKG-INFO  SOURCES.txt
testing/: bone_surface_data_test.py  create_bone_mesh_test.py
vtk_bone_tools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+140 files in other folders)
